rego_side_car_policies/_for_azure/gkeeper/k8s-deny-hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyhostpath
spec:
  crd:
    spec:
      names:
        kind: K8sDenyHostPath
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyhostpath

        deny[msg] {
          volume := input.review.object.spec.volumes[_]
          volume.hostPath
          msg := "Use of hostPath volumes is not allowed."
        }
