rego_side_car_policies/_for_azure/gkeeper/k8s-require-labels.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequirelabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequireLabels
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirelabels

        violation[msg] {
          required := {"env", "owner"}
          label := required[_]
          not input.review.object.metadata.labels[label]
          msg := sprintf("Missing required label: %s", [label])
        }
